funcmap/tests/ui/input/param_const.stderr
error: cannot implement FuncMap over const generic
 --> tests/ui/input/param_const.rs:4:18
  |
4 | #[funcmap(params(N))]
  |                  ^
